# Calculator

./: CMakeLists.txt
forms/: test_form.ui
include/: MainApplication.h  MyButton.h  Solver.h
src/: MainApplication.cpp  MyButton.cpp  Solver.cpp  main.cpp
